@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.30 2005/02/24 09:59:24 agc Exp $
+$NetBSD: distinfo,v 1.31 2005/03/04 15:32:35 uebayasi Exp $
 
-SHA1 (mew-4.1.tar.gz) = 4a89e7d32acd5bfae10aae40b4c5728262f2c750
-RMD160 (mew-4.1.tar.gz) = 70d049339bc103bd0b49da9604fd687ca65e3145
-Size (mew-4.1.tar.gz) = 899279 bytes
+SHA1 (mew-4.2.tar.gz) = 5c425000122ff00a0f02460b46ed4915808d107a
+RMD160 (mew-4.2.tar.gz) = fd7ff4620b6d27eff6baf31ccba98cc10dfcb88d
+Size (mew-4.2.tar.gz) = 925037 bytes
